fixed height for mobile open orders header, fixed order form jumping when user toggles between filled orders and positions on trading page (#2955)

--- a/src/modules/portfolio/components/common/headers/data-table-header.styles.less
+++ b/src/modules/portfolio/components/common/headers/data-table-header.styles.less
@@ -4,6 +4,7 @@
   display: grid;
   flex-direction: row;
   grid-template-columns: repeat(5, 1fr);
+  min-height: 2rem;
   padding: 0.75rem 2.8rem 0.75rem 0;
   width: 100%;
 
@@ -59,7 +60,7 @@
   grid-template-columns: repeat(6, 1fr);
   padding-bottom: 0.75rem;
   padding-right: 1.75rem;
-  padding-top: 0.75rem;
+  padding-top: 0.85rem;
 }
 
 .FilledOrdersHeader__extended {
